--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "npm": "6.14.8"
   },
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "devServer": "nodemon server.js",
+    "start": "node server.js",
+    "client": "npm run start --prefix client",
+    "devAllServer": "concurrently \"npm run devServer\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.10",
