--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^5.3.0",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
     "mongoose": "^5.10.10",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0"
