--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "http-proxy-middleware": "^1.0.6",
     "mongoose": "^5.10.10",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^8.119.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
